infrastructure/manifests/semantics.yaml
#
# Copyright (c) 2021 T-Systems International GmbH (Catena-X Consortium)
#
# See the AUTHORS file(s) distributed with this work for additional
# information regarding authorship.
#
# See the LICENSE file(s) distributed with this work for
# additional information regarding license terms.
#

# K8 server deployment, service and ingress 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semantics
  namespace: semantics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semantics
  template:
    metadata:
      labels:
        app: semantics
    spec:
      containers:
      - name: semantics
        image: $CONTAINER_REGISTRY/semantics/services${WORKSPACE}:$VERSION
        imagePullPolicy: $IMAGE_PULL_POLICY
        ports:
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semantics-ingress
  namespace: semantics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-service
    acme.cert-manager.io/http01-ingress-class: service
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: service
  tls:
  - hosts:
    - ${CATENA_SERVICE_URL}
    secretName: certificate-secret
  rules:
  - host: ${CATENA_SERVICE_URL}
    http:
      paths:
      - path: /semantics(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: semantics
            port:
              number: 8080
